<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TareaGrupo18</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_alumno_menu">AlumnoMenu</string>
    <string name="title_activity_alumno_insertar">AlumnoInsertar</string>
    <string name="title_activity_alumno_modificar">AlumnoModificar</string>
    <string name="title_activity_alumno_eliminar">AlumnoEliminar</string>
    <string name="title_activity_alumno_consultar">AlumnoConsultar</string>
    <string name="title_activity_grupo_menu">GrupoMenu</string>
    <string name="title_activity_grupo_insertar">GrupoInsertar</string>
    <string name="title_activity_grupo_eliminar">GrupoEliminar</string>
    <string name="title_activity_grupo_modificar">GrupoModificar</string>
    <string name="title_activity_grupo_consultar">GrupoConsultar</string>
    <string name="title_activity_docente_menu">DocenteMenu</string>
    <string name="title_activity_perfil_menu">PerfilMenu</string>
    <string name="title_activity_docente_insertar">DocenteInsertar</string>
    <string name="title_activity_docente_eliminar">DocenteEliminar</string>
    <string name="title_activity_docente_modificar">DocenteModificar</string>
    <string name="title_activity_docente_consultar">DocenteConsultar</string>
    <string name="title_activity_perfil_insertar">PerfilInsertar</string>
    <string name="title_activity_perfil_elimiar">PerfilElimiar</string>
    <string name="title_activity_perfil_consultar">PerfilConsultar</string>
    <string name="title_activity_perfil_modificar">PerfilModificar</string>
    <string name="carnet">Carnet</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="matganadas">Materias Ganadas</string>
    <string name="insertar">Insertar</string>
    <string name="limpiar">Limpiar</string>
    <string name="opciones">Opciones:</string>
    <string name="title_activity_trabajo_graduacion_menu">TrabajoGraduacionMenu</string>
    <string name="title_activity_trabajo_graduacion_insertar">TrabajoGraduacionInsertar</string>
    <string name="title_activity_trabajo_graduacion_consultar">TrabajoGraduacionConsultar</string>
    <string name="title_activity_trabajo_graduacion_modificar">TrabajoGraduacionModificar</string>
    <string name="title_activity_trabajo_graduacion_eliminar">TrabajoGraduacionEliminar</string>
    <string name="title_activity_especialidad_menu">EspecialidadMenu</string>
    <string name="title_activity_especialidad_insertar">EspecialidadInsertar</string>
    <string name="title_activity_especialidad_modificar">EspecialidadModificar</string>
    <string name="title_activity_especialidad_consultar">EspecialidadConsultar</string>
    <string name="title_activity_especialidad_eliminar">EspecialidadEliminar</string>
    <string name="title_activity_institucion_menu">InstitucionMenu</string>
    <string name="title_activity_institucion_insertar">InstitucionInsertar</string>
    <string name="title_activity_institucion_modificar">InstitucionModificar</string>
    <string name="title_activity_institucion_consultar">InstitucionConsultar</string>
    <string name="title_activity_institucion_eliminar">InstitucionEliminar</string>
    <string name="codigoInstitucion">Codigo de Institucion</string>
    <string name="nombreInstitucion">Nombre de Institucion</string>
    <string name="consultar">Consultar</string>
    <string name="cconsultarinst">Codigo de Institucion</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="cespecialidad">Codigo de Especialidad</string>
    <string name="cfmaestro">Codigo de Maestro</string>
    <string name="title_activity_facultad_consultar">FacultadConsultar</string>
    <string name="title_activity_facultad_insertar">FacultadInsertar</string>
    <string name="title_activity_facultad_eliminar">FacultadEliminar</string>
    <string name="title_activity_facultad_menu">FacultadMenu</string>
    <string name="title_activity_facultad_modificar">FacultadModificar</string>
    <string name="title_activity_carrera_menu">CarreraMenu</string>
    <string name="title_activity_carrera_consultar">CarreraConsultar</string>
    <string name="title_activity_carrera_eliminar">CarreraEliminar</string>
    <string name="title_activity_carrera_insertar">CarreraInsertar</string>
    <string name="title_activity_carrera_modificar">CarreraModificar</string>
    <string name="title_activity_registro_bitacora_menu">RegistroBitacoraMenu</string>
    <string name="title_activity_registro_bitacora_consultar">RegistroBitacoraConsultar</string>
    <string name="title_activity_registro_bitacora">RegistroBitacora</string>
    <string name="title_activity_registro_bitacora_eliminar">RegistroBitacoraEliminar</string>
    <string name="title_activity_registro_bitacora_insertar">RegistroBitacoraInsertar</string>
    <string name="title_activity_registro_bitacora_modificar">RegistroBitacoraModificar</string>
    <string name="title_activity_tipo_especialidad_menu">TipoEspecialidadMenu</string>
    <string name="title_activity_tipo_especialidad_consultar">TipoEspecialidadConsultar</string>
    <string name="title_activity_tipo_especialidad_eliminar">TipoEspecialidadEliminar</string>
    <string name="title_activity_tipo_especialidad_insertar">TipoEspecialidadInsertar</string>
    <string name="title_activity_tipo_especialidad_modificar">TipoEspecialidadModificar</string>
    <string name="title_activity_bitacora_menu">BitacoraMenu</string>
    <string name="title_activity_etapa_menu">EtapaMenu</string>
    <string name="title_activity_evaluacion_etapa_menu">EvaluacionEtapaMenu</string>
    <string name="title_activity_bitacora_consultar">BitacoraConsultar</string>
    <string name="title_activity_bitacora_eliminar">BitacoraEliminar</string>
    <string name="title_activity_bitacora_insertar">BitacoraInsertar</string>
    <string name="title_activity_bitacora_modificar">BitacoraModificar</string>
    <string name="title_activity_etapa_consultar">EtapaConsultar</string>
    <string name="title_activity_etapa_eliminar">EtapaEliminar</string>
    <string name="title_activity_etapa_insertar">EtapaInsertar</string>
    <string name="title_activity_etapa_modificar">EtapaModificar</string>
    <string name="title_activity_evaluacion_etapa_consultar">EvaluacionEtapaConsultar</string>
    <string name="title_activity_evaluacion_etapa_eliminar">EvaluacionEtapaEliminar</string>
    <string name="title_activity_evaluacion_etapa_insertar">EvaluacionEtapaInsertar</string>
    <string name="title_activity_evaluacion_etapa_modificar">EvaluacionEtapaModificar</string>
    <string name="ntgraduacion">N Trabajo de Graduacion</string>
    <string name="Numeroetapa">Numero de etapa</string>
    <string name="nperfil">Numero de Perfil</string>
    <string name="pavance">Porcentaje de Avance</string>
    <string name="nombreespecialidad">Nombre de especialidad</string>
    <string name="NotaEtapa">Nota</string>
    <string name="ccarrera">Codigo de la carrera</string>
    <string name="Ncarr">Nombre de la carrera</string>
    <string name="CFacultad">Codigo de la facultad</string>
    <string name="NFacultad">Nombre de la facultad</string>
    <string name="perfil">Numero de perfil</string>
    <string name="estado">Estado del perfil</string>
    <string name="observaciones">Observaciones</string>
    <string name="cbitacora">Codigo de bitacora</string>
    <string name="Quien">Quien</string>
    <string name="Lugar">Lugar</string>
    <string name="EtapaDesarrollada">Etapa en desarrollo</string>
    <string name="horainicio">Hora de inicio</string>
    <string name="horafin">Hora de finalizacion</string>
    <string name="Grupo">Numero de Grupo</string>
    <string name="iddocente">Id Docente</string>
    <string name="tiporeunion">Tipo de reunion</string>
    <string name="fecha">fecha</string>
    <string name="infofacu">Facultad</string>
    <string name="numeroinstitucion">ID institucion</string>
    <string name="numerogrupo">Numero de grupo</string>
    <string name="title_activity_menu_secundario">MenuSecundarioActivity</string>
    <string name="title_activity_crear_usuario">CrearUsuarioActivity</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contrasena</string>
    <string name="nota1">Tabla Alumno</string>
    <string name="nota2">Tabla Grupo</string>
    <string name="nota3">Tabla Docente</string>
    <string name="nota4">Tabla Perfil</string>
    <string name="nota5">Tabla Trabajo de Graduacion</string>
    <string name="nota6">Tabla Especialidad</string>
    <string name="nota7">Tabla Institucion</string>
    <string name="nota8">Tabla Facultad</string>
    <string name="nota9">Tabla Carrera</string>
    <string name="nota10">Tabla Registro de Bitacoras</string>
    <string name="nota11">Tabla Tipo de especialidades</string>
    <string name="nota12">Tabla apertura de una Bitacora</string>
    <string name="nota13">Tabla Etapa</string>
    <string name="nota14">Tabla Evaluacion Etapa</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_bitacora_actualizar">BitacoraActualizar</string>

</resources>
