<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="30dip"
	android:stretchColumns="1" >
	<TableRow>
		<TextView android:text="@string/cbitacora"/>
		<EditText
			android:id="@+id/editIdBitacora"
			android:inputType="number"
			android:maxLength="7" />
		</TableRow>
	<TableRow>
		<TextView android:text="@string/ntgraduacion" />
		<EditText
			android:id="@+id/editNTG"
			android:inputType="text"
			android:maxLength="30" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/Quien" />
		<EditText
			android:id="@+id/editQuien"
			android:inputType="text"
			android:maxLength="30" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/Lugar" />
		<EditText
			android:id="@+id/editLugar"
			android:inputType="text"
			android:maxLength="50" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/EtapaDesarrollada" />
		<EditText
			android:id="@+id/editEtdesarrollada"
			android:inputType="number"
			android:maxLength="2" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/horainicio" />
		<EditText
			android:id="@+id/edithorainicio"
			android:inputType="text"
			android:maxLength="50" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/horafin" />
		<EditText
			android:id="@+id/edithorafin"
			android:inputType="text"
			android:maxLength="50" />
	</TableRow>
	
	<TableRow>
		<TextView android:text="@string/opciones" />
	</TableRow>
	<TableRow>
		<Button
			android:onClick="insertarBitacora"
			android:text="@string/insertar" />
		<Button
			android:onClick="limpiarTexto"
			android:text="@string/limpiar" />
	</TableRow>
</TableLayout>
