<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:paddingTop="10dip"
	android:stretchColumns="1" >
	<TableRow>
		<TextView android:text="@string/perfil" />
		<EditText
		    android:id="@+id/editCCperfil"
		    android:inputType="number"
		    android:maxLength="7" />
			</TableRow>

	<TableRow>
		<TextView android:text="@string/numerogrupo" />
		<EditText
		    android:id="@+id/editNGper"
		    android:inputType="number"
		    android:maxLength="7" />
			</TableRow>
			
	<TableRow>
		<TextView android:text="@string/numeroinstitucion" />
		<EditText
		    android:id="@+id/editIDperf"
		    android:inputType="number"
		    android:maxLength="7" />
			</TableRow>
	
	
	<TableRow>
		<TextView android:text="@string/estado" />
		<EditText
			android:id="@+id/editCCperf"
			android:inputType="text"
			android:maxLength="30" />
	</TableRow>
	<TableRow>
		<TextView android:text="@string/observaciones" />
		<EditText
			android:id="@+id/editCCper"
			android:inputType="text"
			android:maxLength="30" />
	</TableRow>

	<TableRow>
		<Button
			android:onClick="actualizarPerfil"
			android:text="@string/actualizar" />
	</TableRow>
	<TableRow>
		<Button
			android:onClick="limpiarTexto"
			android:text="@string/limpiar" />
	</TableRow>
</TableLayout>