<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="30dip"
	android:stretchColumns="1" >
	<TableRow>
		<TextView
		    style="@style/estilo1" 
		    android:text="@string/perfil"/>

		<EditText
		    android:id="@+id/editNPerfil"
		    android:inputType="number"
		    android:maxLength="15" />

		</TableRow>
		
	<TableRow>
		<TextView
		    style="@style/estilo1" 
		    android:text="@string/numerogrupo"/>

		<EditText
		    android:id="@+id/editNumerogrupo"
		    android:inputType="number"
		    android:maxLength="5" />

		</TableRow>
		
	<TableRow>
		<TextView
		    style="@style/estilo1" 
		    android:text="@string/numeroinstitucion"/>

		<EditText
		    android:id="@+id/editIDinstitucion"
		    android:inputType="number"
		    android:maxLength="15" />

		</TableRow>
	<TableRow>
		<TextView
		    style="@style/estilo1" 
		    android:text="@string/estado"/>

		<EditText
		    android:id="@+id/editEsPerfil"
		    android:inputType="text"
		    android:maxLength="15" />

		</TableRow>
	<TableRow>
		<TextView 
		    style="@style/estilo1"
		    android:text="@string/observaciones" />

		<EditText
		    android:id="@+id/editObPerfil"
		    android:inputType="text"
		    android:maxLength="50" />

	</TableRow>
	<TableRow>
		<Button
			android:onClick="insertarPerfil"
			android:text="@string/insertar" />
		<Button
			android:onClick="limpiarTexto"
			android:text="@string/limpiar" />
	</TableRow>
</TableLayout>
