<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="30dip"
	android:stretchColumns="1" >
	<TableRow>
		<TextView
		    style="@style/estilo1" 
		    android:text="@string/cbitacora"/>

		<EditText
		    android:id="@+id/editIdBitacora"
		    android:inputType="number"
		    android:maxLength="7" />

		</TableRow>
	<TableRow>
		<TextView 
		    style="@style/estilo1"
		    android:text="@string/carnet" />

		<EditText
		    android:id="@+id/editcarnet"
		    android:inputType="text"
		    android:maxLength="50" />

	</TableRow>
	<TableRow>
		<TextView 
		    style="@style/estilo1"
		    android:text="@string/tiporeunion" />

		<EditText
		    android:id="@+id/edittiporeunion"
		    android:inputType="text"
		    android:maxLength="50" />

	</TableRow>
	<TableRow>
		<TextView 
		    style="@style/estilo1"
		    android:text="@string/fecha" />

		<EditText
		    android:id="@+id/editfecha"
		    android:inputType="text"
		    android:maxLength="50" />

	</TableRow>
	<TableRow>
		<Button
		    android:onClick="actualizarRegistroBitacora"
			android:text="@string/actualizar" /><!--android:onClick="insertarTipoEspecialidad"-->
		<Button
			android:onClick="limpiarTexto"
			android:text="@string/limpiar" />
	</TableRow>
</TableLayout>