<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="30dip"
	android:stretchColumns="1" >
<TableRow >
    <TextView
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Numeroetapa" />
    <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:id="@+id/editEtapaNumeroEtapaInsertar"/>
       
           
</TableRow>
<TableRow >
 <TextView
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ntgraduacion" />
 
  <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:id="@+id/editEtapaNTGInsertar"/>
    </TableRow>
    
<TableRow>
    <TextView 
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha" />

    <EditText
       android:id="@+id/editEtapaFechaInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:inputType="date" >
         
  
    </EditText>
    
</TableRow>
<TableRow >

    <Button 
        android:text="@string/insertar"
        android:onClick="insertaretapa"/>
</TableRow>
<TableRow >
    <Button android:text="@string/limpiar"
            android:onClick="limpiaretapa" />
</TableRow>

</TableLayout>
