<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/cbitacora"/>

	<EditText
	    android:id="@+id/editIdBitacora"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:inputType="number"
	    android:maxLength="7" />

	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" >
		<Button
			android:id="@+id/botonConsultar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/consultar"/>
		<Button
			android:id="@+id/botonLimpiar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/limpiar"/>
	</LinearLayout>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/ntgraduacion" />
	<EditText
		android:id="@+id/editntg"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:enabled ="false"
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:cursorVisible="false"
		android:longClickable="false" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Quien" />
	<EditText
		android:id="@+id/editQuien"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:enabled ="false"
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:cursorVisible="false"
		android:longClickable="false" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Lugar" />
	<EditText
		android:id="@+id/editLugar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:enabled ="false"
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:cursorVisible="false"
		android:longClickable="false" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/EtapaDesarrollada" />
	<EditText
		android:id="@+id/editEtapaDesarrollada"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:enabled ="false"
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:cursorVisible="false"
		android:longClickable="false" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/EtapaDesarrollada" />
	<EditText
		android:id="@+id/editEtapaDesarrollada"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:enabled ="false"
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:cursorVisible="false"
		android:longClickable="false" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/horainicio" />
	<EditText
		android:id="@+id/edithorainicio"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:enabled ="false"
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:cursorVisible="false"
		android:longClickable="false" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/horafin" />
	<EditText
		android:id="@+id/edithorafin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text"
		android:enabled ="false"
		android:focusable="false"
		android:focusableInTouchMode="false"
		android:cursorVisible="false"
		android:longClickable="false" />
	
</LinearLayout>