<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="30dip"
	android:stretchColumns="1" >
<TableRow >
    <TextView
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Numeroetapa" />
    <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editnumeroetapaconsultaretapa"/>
    
</TableRow>
<TableRow >
    <Button 
        android:text="@string/consultar"
        android:onClick="consultaretapa"/>
</TableRow>
<TableRow >
     <TextView
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ntgraduacion" />
     <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:enabled="false"
        android:id="@+id/editntgraduacionconsultaretapa"/>
</TableRow>

<TableRow >
     <TextView
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha" />
     <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
         android:enabled="false"
        android:id="@+id/editfechaconsultaretapa"/>
        
        </TableRow>
        <TableRow >
            <Button 
                android:text="@string/limpiar"
                android:onClick="limpiarconsultaretapa"/>
        </TableRow>
</TableLayout>
