<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="30dip"
	android:stretchColumns="1" >
  <TableRow>

        <TextView
            android:id="@+id/netapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Numeroetapa"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editNEtapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carnet"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editEvaluacionEtapaCarnet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" 
            android:maxLength="7"/>

    </TableRow>
     <TableRow >

        <TextView
            android:text="@string/NotaEtapa"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editNotaEvaluacionEtapaInsertar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

    </TableRow>
    

    <TableRow>

        <Button
            android:layout_width="match_parent"
            android:text="@string/insertar"
            android:onClick="InsertarEvaluacionEtapa" />

        <Button
             android:text="@string/limpiar"
             android:onClick="limpiarEvaluacionEtapaInsertar"  />

    </TableRow>
  

</TableLayout>
