<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="10dip"
	android:stretchColumns="1" >

    <TableRow>

        <TextView
        
            android:text="@string/Numeroetapa"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editNumeroEtapaEvaluacioEtapaModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Buscar"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carnet"
            android:hint="Buscar"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editCarnetEvaluacionEtapaModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Buscar"
            android:inputType="text" />

    </TableRow>

    <TableRow >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NotaEtapa"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editNotaEvaluacionEtapaModificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Modificar"
            android:inputType="numberDecimal" />

    </TableRow>

    <TableRow >

        <Button android:text="@string/actualizar"
            	android:onClick="actualizarevaluacionetapa" />

    </TableRow>

    <TableRow >

        <Button android:text="@string/limpiar"
            	android:onClick="limpiaractualizarevaluacionetapa" />

    </TableRow>

</TableLayout>

