<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="30dip"
	android:stretchColumns="1" >
	
<TableRow >
    <TextView
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Numeroetapa" />
    <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:id="@+id/editnumeroetapamodificaretapa"
        android:hint="Buscar"/>
</TableRow>    

<TableRow >
    <TextView 
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ntgraduacion"/>
    <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:id="@+id/editntgetapamodificar"
        android:hint="Actualizar ntg"/>
</TableRow>
<TableRow >
    <TextView 
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"/>
    <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:id="@+id/editfechamodificaretapa"
        android:hint="Actualizar fecha"/>
</TableRow>
<TableRow >
    <Button 
        android:text="@string/actualizar"
        android:onClick="actualizaretapa"/>
</TableRow>
</TableLayout>
