<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/usuario" />

	<EditText
	    android:id="@+id/editusuario"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:maxLength="50"
	    android:hint="root" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/contrasena" />

	<EditText
	    android:id="@+id/editcontrasena"
	    android:layout_height="wrap_content"
		android:gravity="center" 
		android:inputType="textPassword"
		android:layout_width="fill_parent"  
		android:maxLines="1" />

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/ingresar"
		android:onClick="Ingresar"/>
</LinearLayout>

