<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingTop="30dip"
	android:stretchColumns="1" >
<TableRow >
    <TextView
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Grupo" />
    <EditText 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/editGrupoModificar"/>
    </TableRow>
    <TableRow >
        <TextView
        style="@style/estilo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iddocente" />
        <EditText 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="text"
          android:id="@+id/editIdDocenteModificar" />
    </TableRow>
    <TableRow >
        <Button 
            android:text="@string/actualizar"
            android:onClick="actualizarGrupo" />
    </TableRow>

</TableLayout>
