<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/cbitacora"/>

	<EditText
	    android:id="@+id/editIdBitacora"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:inputType="number"
	    android:maxLength="7" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/carnet"/>

	<EditText
	    android:id="@+id/editcarnet"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:maxLength="7" />

	<LinearLayout
		android:id="@+id/linearLayout1"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" >
		<Button
			android:id="@+id/botonConsultar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/eliminar"
			android:onClick="eliminarRegistroBitacora"/>
	</LinearLayout>
	
</LinearLayout>
